[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = seaflux/_version.py,seaflux/__init__.py,docs/conf.py,seaflux/data/__init__.py


[metadata]
name = seaflux
description = Calculation of air-sea fluxes
author = Luke Gregor
url = https://github.com/lukegre/seaflux
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    # Don't change this one
    License :: OSI Approved :: MIT License

## Add your email here
author_email = luke.gregor@usys.ethz.ch


### make sure to fill in your dependencies!
[options]
install_requires =
    numpy
    requests
    fetch-data
setup_requires=
    setuptools_scm
python_requires = >=3.6
################ Up until here

zip_safe = False
packages = find:
